✨ Add session custom icons
