# src/app4event/entity.ts
@@ -14,3 +14,4 @@ export type Day = openapi.types.components['schemas']['Day']
 export type VenueCategory = openapi.types.components['schemas']['VenueCategory']
 export type VenueCategoryLayout = openapi.types.components['schemas']['VenueCategoryLayout']
 export type Highlight = openapi.types.components['schemas']['Highlight']
+export type CustomIcon = openapi.types.components['schemas']['CustomIcon']
